compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_field_update2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        pub type Person {\n            Person(name: String, age: Int, size: Int)\n        };\n        pub fn update_person(person: Person) {\n            Person(..person, size: 66, one: 5, age: 3)\n        }"

---

error: Unknown record field
  ┌─ /src/one/two.gleam:6:40
  │
6 │             Person(..person, size: 66, one: 5, age: 3)
  │                                        ^^^^^^ did you mean `age`?

The record being updated has this type:

    Person

It has these fields:

    .age
    .name
    .size

